# push_swap

./: CMakeLists.txt  Makefile  README.md  author  check_smthng.c  checker  checker.c  main.c  new_and_free.c  oldsort_2_5.c  operations.c  push_swap  push_swap.c  push_swap.h  set_index.c  sort_2_5.c  sort_small.c  sorting.c  sorting_al.c  test.sh
checker.dSYM/Contents/Resources/DWARF/: checker
inc/: push_swap.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_cntwrds.c  ft_deltwodimarray.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_iswhitespace.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  (+24 more)
printf/: Makefile
printf/inc/: ft_printf.h
printf/libft/: Makefile  author  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_len_of_number_int.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_pow.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  (+24 more)
push_swap.dSYM/Contents/Resources/DWARF/: push_swap
src/: check_smthng.c  checker.c  delete.c  help_func.c  help_sort.c  new.c  new_and_free.c  operations.c  push_swap.c  rotate_if.c  save_argv.c  set_index.c  sort_help.c  sort_small.c  sorting_al.c
