cmake_minimum_required(VERSION 3.14)
project(push_swap C)

set(CMAKE_C_STANDARD 11)

include_directories(inc)
include_directories(printf/inc)
include_directories(printf/libft)

add_executable(push_swap
        inc/push_swap.h
        printf/inc/ft_printf.h
        printf/libft/ft_atoi.c
        printf/libft/ft_atoi_base.c
        printf/libft/ft_bzero.c
        printf/libft/ft_clear_table.c
        printf/libft/ft_countwords.c
        printf/libft/ft_free.c
        printf/libft/ft_is_minus_inf.c
        printf/libft/ft_isalnum.c
        printf/libft/ft_isalpha.c
        printf/libft/ft_isascii.c
        printf/libft/ft_isdigit.c
        printf/libft/ft_isinf.c
        printf/libft/ft_isnan.c
        printf/libft/ft_isprint.c
        printf/libft/ft_iswhitespace.c
        printf/libft/ft_iterative_factorial.c
        printf/libft/ft_iterative_power.c
        printf/libft/ft_itoa.c
        printf/libft/ft_len_of_number_int.c
        printf/libft/ft_lltoa.c
        printf/libft/ft_llutoa.c
        printf/libft/ft_lstadd.c
        printf/libft/ft_lstdel.c
        printf/libft/ft_lstdelone.c
        printf/libft/ft_lstiter.c
        printf/libft/ft_lstmap.c
        printf/libft/ft_lstnew.c
        printf/libft/ft_memalloc.c
        printf/libft/ft_memccpy.c
        printf/libft/ft_memchr.c
        printf/libft/ft_memcmp.c
        printf/libft/ft_memcpy.c
        printf/libft/ft_memdel.c
        printf/libft/ft_memmove.c
        printf/libft/ft_memset.c
        printf/libft/ft_pow.c
        printf/libft/ft_pow_double.c
        printf/libft/ft_putchar.c
        printf/libft/ft_putchar_fd.c
        printf/libft/ft_putendl.c
        printf/libft/ft_putendl_fd.c
        printf/libft/ft_putnbr.c
        printf/libft/ft_putnbr_fd.c
        printf/libft/ft_putnbr_max.c
        printf/libft/ft_putstr.c
        printf/libft/ft_putstr_fd.c
        printf/libft/ft_sqrt.c
        printf/libft/ft_strcat.c
        printf/libft/ft_strchr.c
        printf/libft/ft_strclr.c
        printf/libft/ft_strcmp.c
        printf/libft/ft_strcpy.c
        printf/libft/ft_strdel.c
        printf/libft/ft_strdup.c
        printf/libft/ft_strequ.c
        printf/libft/ft_striter.c
        printf/libft/ft_striteri.c
        printf/libft/ft_strjoin.c
        printf/libft/ft_strjoin_free.c
        printf/libft/ft_strlcat.c
        printf/libft/ft_strlen.c
        printf/libft/ft_strmap.c
        printf/libft/ft_strmapi.c
        printf/libft/ft_strncat.c
        printf/libft/ft_strncmp.c
        printf/libft/ft_strncpy.c
        printf/libft/ft_strnequ.c
        printf/libft/ft_strnew.c
        printf/libft/ft_strnstr.c
        printf/libft/ft_strrchr.c
        printf/libft/ft_strsplit.c
        printf/libft/ft_strstr.c
        printf/libft/ft_strsub.c
        printf/libft/ft_strtrim.c
        printf/libft/ft_tolower.c
        printf/libft/ft_toupper.c
        printf/libft/ft_ulltoa.c
        printf/libft/get_next_line.c
        printf/libft/itoa_base.c
        printf/libft/libft.h
        printf/libft/number_len.c
        printf/libft/number_len_ll.c
        printf/libft/number_len_ull.c
        printf/libft/to_uppercase.c
        printf/libft/ulltoa_base.c
        printf/src/check.c
        printf/src/fill_final.c
        printf/src/find.c
        printf/src/find_str_size.c
        printf/src/float_maker.c
        printf/src/float_new_free.c
        printf/src/float_put.c
        printf/src/floats.c
        printf/src/ft_printf.c
        printf/src/new_str.c
        printf/src/other.c
        printf/src/parse_format.c
        printf/src/pf_format.c
        printf/src/pf_free.c
        printf/src/pf_lib.c
        printf/src/print_check.c
        src/check_smthng.c
        src/new_and_free.c
        src/operations.c
        src/push_swap.c
        src/set_index.c
        src/sort_small.c
        src/sorting_al.c)
